--- a/test-output/old/nopcommerce/methods.html
+++ b/test-output/old/nopcommerce/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>nopcommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c1b5b6">  <td>22/07/18 10:54:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@4ef37659]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1124162665</td>   <td></td> </tr>
-<tr bgcolor="a2befb">  <td>22/07/18 10:54:21</td>   <td>1720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginTest()[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@4ef37659]">loginTest</td> 
-  <td>main@1124162665</td>   <td></td> </tr>
-<tr bgcolor="c1b5b6">  <td>22/07/18 10:54:31</td>   <td>11858</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@4ef37659]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1124162665</td>   <td></td> </tr>
+<tr bgcolor="b96fde">  <td>22/07/26 19:54:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@5bfa9431]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@917831210</td>   <td></td> </tr>
+<tr bgcolor="8eabb0">  <td>22/07/26 19:54:31</td>   <td>1416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginTest()[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@5bfa9431]">loginTest</td> 
+  <td>main@917831210</td>   <td></td> </tr>
+<tr bgcolor="b96fde">  <td>22/07/26 19:54:44</td>   <td>13813</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@5bfa9431]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@917831210</td>   <td></td> </tr>
+<tr bgcolor="b96fde">  <td>22/07/26 19:54:44</td>   <td>13895</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_AddCustomerTest_003@5db250b4]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@917831210</td>   <td></td> </tr>
+<tr bgcolor="66a265">  <td>22/07/26 19:54:45</td>   <td>14808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddCustomerTest_003.addNewCustomer()[pri:0, instance:com.nopcommerce.testCases.TC_AddCustomerTest_003@5db250b4]">addNewCustomer</td> 
+  <td>main@917831210</td>   <td></td> </tr>
+<tr bgcolor="b96fde">  <td>22/07/26 19:54:51</td>   <td>21117</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.TC_AddCustomerTest_003@5db250b4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@917831210</td>   <td></td> </tr>
 </table>
